A fuck ton of spelling fixes, plus a few bugs fixes from mistakes I made in the past

--- a/localisation/air_l_english.yml
+++ b/localisation/air_l_english.yml
@@ -179,7 +179,7 @@
  AIRWING_TRANSFERRING_TO_WAREHOUSE:1 "To Reserves"
  AIRWING_TRANSFERRING_FROM_WAREHOUSE:1 "From Reserves"
  AIRWING_DEPLOYING:0 "§HDeploying from Reserves§!"
- AIRWING_DEPLOYMENT_CANCELING:0 "§HCanceling§!"
+ AIRWING_DEPLOYMENT_CANCELING:0 "§HCancelling§!"
  AIR_WING_REBASE_TITLE:0 "Rebasing"
  AIR_WING_REBASE_FULL_DESC:0 "§RWe won't be able to fit all air wings in closer bases, do you still want to rebase them?§!"
  AIR_REBASING_ALREADY_BEST:0 "§RAll active planes already in the closest possible bases.§!"
