--- a/localisation/alerts_l_english.yml
+++ b/localisation/alerts_l_english.yml
@@ -111,7 +111,7 @@
  alert_lack_of_resources_instant:0 "§HInsufficient resources§!"
  alert_lack_of_resources_delayed:0 "Need: $RESOURCES$.\nEquipment will be produced at §Rreduced speed§! while factories lack resources."
  alert_paused_diplomatic_actions_instant:0 "§HDiplomatic actions can't progress§!"
- alert_paused_diplomatic_actions_delayed:0 "Some of your diplomatic actions can't progress because you lack Political Power.\nConsider canceling these actions so they don't affect your Political Power gain.\n\nAffected relations:\n$COUNTRIES$"
+ alert_paused_diplomatic_actions_delayed:0 "Some of your diplomatic actions can't progress because you lack Political Power.\nConsider cancelling these actions so they don't affect your Political Power gain.\n\nAffected relations:\n$COUNTRIES$"
  alert_resistance_instant:0 "§HResistance to occupation!§!"
  alert_resistance_delayed:0 "High levels of resistance in:\n$LIST|H$"
  alert_outdated_equipment_instant:0 "§HOutdated equipment in production§!"
@@ -122,10 +122,10 @@
  alert_not_training_divisions_delayed:0 "You are currently not training any new Divisions."
  PLAY_AS_OBSERVED:0 "Play as Observed Country"
  PLAY_AS_OBSERVED_DESC:0 "Are you sure you want to start playing as $COUNTRY$?"
- ASK_TO_COOP_TITLE:0 "Ask to Coop"
- ASK_TO_COOP_TITLE_DESC:0 "Are you sure you want to ask $PLAYER$ to coop in $COUNTRY$?"
- ALLOW_COOP_REQUEST:0 "Player Asking for Coop"
- ALLOW_COOP_REQUEST_DESC:0 "$PLAYER$ Is asking to join you as a Coop partner, allow?"
+ ASK_TO_COOP_TITLE:0 "Ask to Co-op"
+ ASK_TO_COOP_TITLE_DESC:0 "Are you sure you want to ask $PLAYER$ to co-op in $COUNTRY$?"
+ ALLOW_COOP_REQUEST:0 "Player Asking for Co-op"
+ ALLOW_COOP_REQUEST_DESC:0 "$PLAYER$ Is asking to join you as a Co-op partner, allow?"
  AND_X_MORE_REPORT:0 "\nAnd $VAL|Y$ more reports"
  ALERT_AIR_RESERVES_UNUSED_ENTRY:0 "$EQUIPMENT|Y$: $AMOUNT|0Y$"
  alert_port_strike_results_instant:0 "§HUnread Port Strike Results§!"
