--- a/localisation/army_l_english.yml
+++ b/localisation/army_l_english.yml
@@ -84,7 +84,7 @@
  PLAN_VALUE_LARGE_RIVER:0 "Large river crossing: $VAL|0%+%$"
  PLAN_VALUE_STRAIT:0 "Strait: $VAL|0%+%$"
  PLAN_VALUE_FORTIFIED:0 "Fortified: $VAL|0%+%$"
- PLAN_VALUE_NO_THREAT:0 "§GNo detectable treats§!"
+ PLAN_VALUE_NO_THREAT:0 "§GNo detectable threats§!"
  PLAN_VALUE_STILL_PLANNING:0 "Division still preparing: $VAL|0%+%$"
  PLAN_VALUE_NOT_IN_POSITION:0 "Some divisions not in position: $VAL|0%+%$"
  MILITA_ARMY_NAME:0 "$TEMPLATE$ Militia $NUMBER$"
@@ -105,7 +105,7 @@
  THEATER_GROUP_ASSIGN_RIGHT_CLICK_BUTTON_DESC:1 "§GRight-Click to assign army to the current theatre§!"
  THEATER_GROUP_ASSIGN_TO_VOLUNTEERS_DESC:1 "§RCannot assign non-volunteer armies to volunteer theatre§!"
  THEATER_GROUP_ASSIGN_FROM_VOLUNTEERS_DESC:1 "§RCannot assign volunteer armies to non-volunteer theatre§!"
- THEATER_ORDER_GROUP_BAD_COMBATS:0 "$NAME|H$: $COUNT|0R$ combat"
+ THEATER_ORDER_GROUP_BAD_COMBATS:0 "$NAME|H$: $COUNT|0R$ combats"
  THEATER_ORDER_GROUP_BAD_COMBAT:0 "$NAME|H$: $COUNT|0R$ combat"
  THEATER_GROUP_OFFENSIVE_TROUBLES:0 "§RThis theatre is having problems in $BAD_COUNT|H$ offensive combat, out of $COUNT|H$ total.\nProblematic combat:§! \n$LIST$"
  THEATER_GROUP_DEFENSIVE_TROUBLES:0 "§RThis theatre is having problems in $BAD_COUNT|H$ defensive combat, out of $COUNT|H$ total.\nProblematic combat:§! \n$LIST$"
