--- a/localisation/combat_l_english.yml
+++ b/localisation/combat_l_english.yml
@@ -127,7 +127,7 @@
  NAVAL_COMBAT_RESULT_SURVIVOR_DMG:0 "  $FLAG$ $TYPE$ ($DMG|%0R$)\n"
  NAVAL_COMBAT_RESULT_SUNK_BY:0 "$NAME|Y$ (sunk by $KILLER|Y$)"
  LAND_COMBAT_CAS_INFO:0 "Total shot down: $LOST|R$\n£organization_texticon Damage $ORG|R0$\n£strenght_texticon Damage: $STR|R0$"
- LAND_COMBAT_CAS_INFO_TOOLTIP:1 "Around $NUM|Y$ support planes from the $SIDE$ side have recently managed to help out in this combat.\nThey have dealt $ORG|G0$ damage to §YOrganization§!, the current enemy §YOrganization§! is $ORG_MAX|G0$.\nThey have dealt $STR|G0$ damage to §YStrength§!, the current enemy §YStrength§! is $STR_MAX|G0$.\nThe enemy divisions §YAnti Air§! managed to shoot down $KILL|R$ planes in total."
+ LAND_COMBAT_CAS_INFO_TOOLTIP:1 "Around $NUM|Y$ support planes from the $SIDE$ side have recently managed to help out in this combat.\nThey have dealt $ORG|G0$ damage to §YOrganisation§!, the current enemy §YOrganisation§! is $ORG_MAX|G0$.\nThey have dealt $STR|G0$ damage to §YStrength§!, the current enemy §YStrength§! is $STR_MAX|G0$.\nThe enemy divisions §YAnti Air§! managed to shoot down $KILL|R$ planes in total."
  LAND_COMBAT_CAS_INFO_TOOLTIP_DETAIL:0 "The max amount of planes that can help out are $MAX_PLANES|Y$. The bigger the used Combat Width is, the more planes can fit."
  SHIP_KILLS_AND_ASSISTS:0 "Sunk $SUNK|G$ enemy ships.\n$ASS|G$ assisted kills."
  CARRIER_STACK_PENALTY_DESC:0 "Too many carrier ships. Air traffic limited to $PERC|%R0$ of the air wings."
@@ -162,7 +162,7 @@
  BM_DEFEND_VALUE:0 "Defence: $VALUE|+=%$"
  BM_BREAKTHROUGH_VALUE:0 "Breakthrough: $VALUE|+=%$"
  BM_STACKING:0 "Stacking Penalty"
- BM_STACKING_DESC:0 "Coordinating too many divisions is difficult."
+ BM_STACKING_DESC:0 "Co-ordinating too many divisions is difficult."
  BM_MULTIPLE_DIRECTIONS:0 "Attacking from multiple directions"
  BM_MULTIPLE_DIRECTIONS_DESC:0 "Attacking from many different directions will widen the combat width. If province is fortified it will reduce forts effect."
  IN_COMBAT:0 "In battle"
@@ -217,7 +217,7 @@
  COMBAT_LOG_COMBATS_ALL:0 "All combat: $TOT|H$"
  COMBAT_LOG_COMBATS_WON:0 "§HWin Ratio§!"
  COMBAT_LOG_COMBATS_WON_DETAILED_DESC:0 "Combat won: $WON|H$\nCombat total: $TOTAL|H$"
- COMBAT_LOG_COMBATS_TOTAL:0 "§Hcombat§!"
+ COMBAT_LOG_COMBATS_TOTAL:0 "§HCombat§!"
  COMBAT_LOG_COMBATS_WON_RATIO:0 "$RATIO|H%0$"
  COMBAT_LOG_FILTER_BTN:0 "Detailed list"
  COMBAT_LOG_TAB_COMBAT:0 "Combat"
