--- a/localisation/constructions_l_english.yml
+++ b/localisation/constructions_l_english.yml
@@ -40,7 +40,7 @@
  CONSTRUCTION_LOWEST_PRIORITY:0 "§GShift+click to give the construction §Hlowest priority§!"
  CONSTRUCTION_INCREASE_AMOUNT_LABEL:0 "§TIncrease amount.§!"
  CONSTRUCTION_DECREASE_AMOUNT_LABEL:0 "§TDecrease amount.§!"
- CONSTRUCTION_MAXIMIZE:0 "§GShift+click to §Hmaximize§!"
+ CONSTRUCTION_MAXIMIZE:0 "§GShift+click to §Hmaximise§!"
  CONSTRUCTION_MAPMODE_TOOLTIP_SHARED:0 "$NAME|H$ have used $USED_SLOTS|Y$ out of $MAX_SLOTS|Y$ building slots.\n$LIST$"
  CONSTRUCTION_MAPMODE_TOOLTIP_SHARED_LIST_ENTRY:0 "$NAME|H$: $LEVEL$"
  CONSTRUCTION_MAPMODE_TOOLTIP:0 "§GClick§! to build $BUILDING|H$"
