--- a/localisation/deployment_l_english.yml
+++ b/localisation/deployment_l_english.yml
@@ -65,11 +65,11 @@
  NEW_EQUIPMENT_ALLOWED:0 "Use new equipment"
  DO_NOT_CONTAINS_TEMPLATE:0 "§RCannot delete this Template. Country does not contain this Template.§!"
  HAS_ARMIES_WITH_TEMPLATE:0 "§RCannot delete this Template because $AMOUNT|H$ Division(s) are using it.§!"
- HAS_ARMIES_WITH_OLD_TEMPLATE:0 "§RCannot delete this Template because $AMOUNT|H$ Division(s) are transitioning from this template to new one (Waiting for receiving equipment matching new template).§!"
+ HAS_ARMIES_WITH_OLD_TEMPLATE:0 "§RCannot delete this Template because $AMOUNT|H$ Division(s) are transitioning from this template to new one (Waiting to receive equipment matching new template).§!"
  HAS_DEPLOYMENT_CONVEYORS_WITH_TEMPLATE:0 "Cannot §RRemove§! this template from the country. Country has $AMOUNT|H$ deployments using this template."
  DEPLOYMENT_TEMPLATE_LABEL:0 "Templates"
  TEMPLATE_PRIO_0:0 "Reserves"
- TEMPLATE_PRIO_0_DESC:0 "Units with this template will receive equipment last and at lowest priority once deployed. Perfect for units set to guard bases and such."
+ TEMPLATE_PRIO_0_DESC:0 "Units with this template will receive equipment last and at lowest priority once deployed. Perfect for units set to guard bases for example."
  TEMPLATE_PRIO_1:0 "Default"
  TEMPLATE_PRIO_1_DESC:0 "Units with this template get average priority for equipment and reinforcement once deployed."
  TEMPLATE_PRIO_2:0 "Elite"
@@ -92,7 +92,7 @@
  CONVEYOR_GROUP_CAN_NOT_ASSIGN_NO_ORDERS_DESC:0 "Deployment should have at least one order within theatre to be assigned to any group."
  CONVEYOR_GROUP_CAN_NOT_ASSIGN_NO_LOCATION_DESC:0 "Deployment should have target location to be assigned to any group."
  CONVEYOR_SET_LOCATION_DESC:0 "§GClick§! to set deployment location for this deployment.\n§GRight-click§! to reset location."
- CONVEYOR_SET_COLONIAL_LOCATION_DESC:0 "§GClick§! to set deployment location for this deployment.\n§GRight-click§! to reset location.\n§YThis is colonial template and can be deployed only in the country of origin!§!"
+ CONVEYOR_SET_COLONIAL_LOCATION_DESC:0 "§GClick§! to set deployment location for this deployment.\n§GRight-click§! to reset location.\n§YThis is a colonial template and can be deployed only in the country of origin!§!"
  CONVEYOR_SET_LOCATION_NOT_SET:0 "§RNo location set§!"
  CONVEYOR_LINE_PREFIX_NAME_EDIT_DESC:0 "Type here to change current line prefix."
  CONVEYOR_LINE_DEPLOY_DESC:0 "§GClick§! to deploy this line instantly."
