--- a/localisation/diplomacy_l_english.yml
+++ b/localisation/diplomacy_l_english.yml
@@ -77,11 +77,11 @@
  DIPLOMACY_MESSAGE_ACCEPTED_TITLE_DIPLOMACY_LEND_LEASE:1 "Lend Lease Accepted"
  DIPLOMACY_MESSAGE_ACCEPTED_MESSAGE_DIPLOMACY_LEND_LEASE:0 "\n§Y$COUNTRY$§! has §Gaccepted§! our lend lease.\n\nOur material support will help their efforts."
  DIPLOMACY_MESSAGE_DECLINED_TITLE_DIPLOMACY_LEND_LEASE:1 "Lend Lease Refused"
- DIPLOMACY_MESSAGE_DECLINED_MESSAGE_DIPLOMACY_LEND_LEASE:0 "\n§Y$COUNTRY$§! has §Rrefused§! our lend lease!\n\nThey will not have our material support."
+ DIPLOMACY_MESSAGE_DECLINED_MESSAGE_DIPLOMACY_LEND_LEASE:0 "\n§Y$COUNTRY$§! has §Rrefused§! our lend lease!\n\nThey will not have our materiel support."
  DIPLOMACY_MESSAGE_ACCEPTED_TITLE_DIPLOMACY_LEND_LEASE_EXISTING:0 "Modified Lend Lease Accepted"
- DIPLOMACY_MESSAGE_ACCEPTED_MESSAGE_DIPLOMACY_LEND_LEASE_EXISTING:0 "\n§Y$COUNTRY$§! has §Gaccepted§! our modified lend lease.\n\nOur continued material support helps their efforts."
+ DIPLOMACY_MESSAGE_ACCEPTED_MESSAGE_DIPLOMACY_LEND_LEASE_EXISTING:0 "\n§Y$COUNTRY$§! has §Gaccepted§! our modified lend lease.\n\nOur continued materiel support helps their efforts."
  DIPLOMACY_MESSAGE_DECLINED_TITLE_DIPLOMACY_LEND_LEASE_EXISTING:0 "Modified Lend Lease Refused"
- DIPLOMACY_MESSAGE_DECLINED_MESSAGE_DIPLOMACY_LEND_LEASE_EXISTING:0 "\n§Y$COUNTRY$§! has §Rrefused§! our modified lend lease!\n\nThey will no longer have our material support."
+ DIPLOMACY_MESSAGE_DECLINED_MESSAGE_DIPLOMACY_LEND_LEASE_EXISTING:0 "\n§Y$COUNTRY$§! has §Rrefused§! our modified lend lease!\n\nThey will no longer have our materiel support."
  DIPLOMACY_MESSAGE_ACCEPTED_TITLE_DIPLOMACY_PEACE_PROPOSAL:0 "Offer of Peace Accepted"
  DIPLOMACY_MESSAGE_ACCEPTED_MESSAGE_DIPLOMACY_PEACE_PROPOSAL:0 "\n§Y$COUNTRY$§! has §Gaccepted§! our offer of peace.\n\nFighting has ceased between our nations."
  DIPLOMACY_MESSAGE_DECLINED_TITLE_DIPLOMACY_PEACE_PROPOSAL:0 "Offer of Peace Refused"
@@ -112,7 +112,7 @@
  DIPLOMACY_MESSAGE_REPLYED_INCOMING_LEND_LEASE_DESC_DESC_UNITS:0 "	$VALUE|0H$ of $NAME|H$"
  DIPLOMACY_MESSAGE_REPLYED_INCOMING_LEND_LEASE_DESC_DESC_PERCENTAGE:0 "	$VALUE|0%H$ of $NAME|H$"
  DIPLOMACY_MESSAGE_CANCELED_TITLE:0 "$RELATION$ cancelled"
- DIPLOMACY_MESSAGE_CANCELED_MESSAGE:0 "$RELATION$ with $COUNTRY$ was §Rcanceled§! $REASON$"
+ DIPLOMACY_MESSAGE_CANCELED_MESSAGE:0 "$RELATION$ with $COUNTRY$ was §Rcancelled§! $REASON$"
  DIPLOMACY_MESSAGE_CANCELED_REASON_US_NO_POWER:0 "because we ran out of political power"
  DIPLOMACY_MESSAGE_CANCELED_REASON_THEY_NO_POWER:0 "because $COUNTRY|Y$ ran out of political power"
  DIPLOMACY_MESSAGE_MAINTAIN_COST:0 "$RELATION|Y$ in $COUNTRY|Y$: §R$VALUE$§! $FREQUENCY$"
@@ -295,14 +295,14 @@
  LEND_LEASE_DETAILS_NEXT_DELIVERY_DATE:0 "Next delivery expected in $DAY|Y$ days."
  LEND_LEASE_DETAILS_NEXT_DELIVERY_ASAP:0 "Next delivery expected at §Yany time§!."
  LEND_LEASE_DETAILS_EQUIPMENT_SUNK:0 "Equipment sunk since $DATE|Y$:"
- LEND_LEASE_VEHICLES_BUTTON:0 "§TLend lease Armored Vehicles§!"
- LEND_LEASE_VEHICLES_BUTTON_DISABLED:0 "§TWe do not produce Armored Vehicles equipment or have any in store§!"
+ LEND_LEASE_VEHICLES_BUTTON:0 "§TLend lease Armoured Vehicles§!"
+ LEND_LEASE_VEHICLES_BUTTON_DISABLED:0 "§TWe do not produce Armoured Vehicles equipment or have any in storage§!"
  LEND_LEASE_INFANTRY_BUTTON:0 "§TLend lease Infantry & Artillery Equipment§!"
- LEND_LEASE_INFANTRY_BUTTON_DISABLED:0 "§TWe do not produce Infantry & Artillery equipment or have any in store§!"
+ LEND_LEASE_INFANTRY_BUTTON_DISABLED:0 "§TWe do not produce Infantry & Artillery equipment or have any in storage§!"
  LEND_LEASE_AIRCRAFT_BUTTON:0 "§TLend lease Aircraft§!"
- LEND_LEASE_AIRCRAFT_BUTTON_DISABLED:0 "§TWe do not produce Aircraft equipment or have any in store§!"
+ LEND_LEASE_AIRCRAFT_BUTTON_DISABLED:0 "§TWe do not produce Aircraft equipment or have any in storage§!"
  LEND_LEASE_NAVAL_BUTTON:0 "§TLend lease Convoys§!"
- LEND_LEASE_NAVAL_BUTTON_DISABLED:0 "§TWe do not produce Convoys equipment or have any in store§!"
+ LEND_LEASE_NAVAL_BUTTON_DISABLED:0 "§TWe do not produce Convoys equipment or have any in storage§!"
  LEND_LEASE_CURRENT_HEADER:0 "Current Lend lease:"
  LEND_LEASE_CURRENT_NONE:0 "No current Lend lease"
  LEND_LEASE_PROMPT:0 "Select equipment to send monthly"
@@ -370,7 +370,7 @@
  DIPLOMACY_NOFACTION:0 "§T$TARGET|H$ is not a member of any faction."
  DIPLOMACY_FACTION_DESC:0 "A faction is a coalition of nation states that are allied to each other. If someone declares war on a faction member, all other faction members will automatically join the war. Faction members can be asked to join offensive wars, but they may refuse.\n\nOnly the faction leader may invite new members to the faction."
  anti_comintern_pact_opinion:0 "Anti-Comintern Pact Signatory"
- anti_soviet_pact_call_refused:0 "Refused To Honor Anti-Soviet Pact"
+ anti_soviet_pact_call_refused:0 "Refused To Honour Anti-Soviet Pact"
  refused_anti_comintern_pact_opinion:0 "Rejected Anti-Comintern Pact"
  tripartite_pact_opinion:0 "Tripartite Pact Signatory"
  refused_tripartite_pact_opinion:0 "Reject Tripartite Pact"
@@ -449,7 +449,7 @@
  DR_FACTION_NEITHER_AT_WAR:0 "Neither they nor we are at war: "
  DR_FACTION_WAR_RELUCTANCE_WAR:0 "We have a war that they may be drawn in to: "
  DR_FACTION_CIVIL_WAR_RELUCTANCE:0 "In civil war: "
- DR_FACTION_SAME_WAR:0 "We are in the same side in a war: "
+ DR_FACTION_SAME_WAR:0 "We are on the same side in a war: "
  DR_FACTION_BOTH_LOSING_WAR:0 "Both them and us are losing wars: "
  DR_THEM_PUPPET:0 "§Y$THEM$§! is a puppet of §Y$US$§!: "
  DR_US_PUPPET:0 "§Y$US$§! is a puppet of §Y$THEM$§!: "
@@ -489,7 +489,7 @@
  SOV_ultimatum_to_greece_thrace:0 "Forced Greece to give Thrace"
  ger_sov_alliance_focus:0 "German-Soviet Alliance Focus"
  ger_jap_diplomacy_focus:0 "German-Japanese Diplomacy Focus"
- withdrew_advisors:0 "Withdrew Advisors"
+ withdrew_advisors:0 "Withdrew Advisers"
  ger_chi_diplomacy_focus:0 "German-Chinese Diplomacy Focus"
  supported_the_chinese:0 "Supported the Chinese"
  ger_tur_diplomacy_focus:0 "German-Turkish Diplomacy Focus"
@@ -549,7 +549,7 @@
  BORDER_WAR_POWER_DESC:0 "Combat values are defined by Divisions' Combat Strength and their Country's Doctrine Level"
  BORDER_WAR_POWER:0 "Our Military Strength in the area: $VAL|*0H$"
  BORDER_WAR_POWER_ENEMY:0 "Their Military Strength in the area: $VAL|*0H$"
- BORDER_WAR_POWER_RATIO:0 "Military Strength Ratio in our favor: $VAL|2%H$"
+ BORDER_WAR_POWER_RATIO:0 "Military Strength Ratio in our favour: $VAL|2%H$"
  BORDER_WAR_ATTRITION:0 "Attrition from Border Conflict: $VAL|=-%$"
  BORDER_WAR_HEADER:0 "§HBorder Conflict§!"
  BORDER_WAR_NOT_OURS:0 "§HThere is a border conflict in this state§!"
@@ -564,7 +564,7 @@
  SEND_VOL_WE_NOT_AT_WAR:1 "We need to be at peace to send volunteer forces."
  SEND_VOL_SENT_VOL_TO_ENEMY:0 "We already sent volunteer forces to the enemy of @$TAG$$WHO|H$"
  SEND_VOL_NOT_ENOUGH_DIVISIONS:0 "We need at least $NUM|H$ Divisions to be able to send volunteer forces."
- SEND_VOL_CONTROL_OF_HOME:0 "@$TAG$$WHO|H$ needs to control it's home theater."
+ SEND_VOL_CONTROL_OF_HOME:0 "@$TAG$$WHO|H$ needs to control it's home theatre."
  SEND_VOL_ENEMY_OF_FRIEND:0 "@$TAG$$WHO|H$ is at war with our ally."
  SEND_EXP_TARGET_AT_WAR:0 "To send them expeditionary forces, @$TAG$$WHO|H$ must be at war."
  SEND_EXP_NOT_A_MASTER:0 "As a puppet we can only send expeditionary forces to our master."
@@ -580,7 +580,7 @@
  CAN_SEND_VOLUNTEERS:0 "Can send volunteer forces"
  SEND_VOL_RULES_DONT_ALLOW:0 "Your country is not allowed to send volunteer forces."
  alert_expeditionary_force_instant:0 "§HExpeditionary Forces§!"
- alert_expeditionary_force_delayed:0 "You have expeditionary forces in this theater."
+ alert_expeditionary_force_delayed:0 "You have expeditionary forces in this theatre."
  SEND_VOLUNTEER_REQUEST:0 "$FROM|H$ wants to send $COUNT|H$ divisions as volunteers to help us out."
  SEND_EXPEDITIONARY_REQUEST:0 "$FROM|H$ wants to send $COUNT|H$ divisions as expeditionary forces to help us out."
  RETURN_ALL_EXPEDITIONARY_FORCES_DESC:0 "Return all expeditionary forces from $TARGET|H$. You have $COUNT|H$ divisions and will instantly regain control over them."
@@ -700,7 +700,7 @@
  SEND_VOLUNTEERS_GENERATE_THREAT:0 "\n\nWill generate §H$THREAT|1$%§! threat.\n"
  SEND_VOLUNTEER_THREAT:0 "Sent $COUNT$ volunteer divisions to $TARGET$"
  DIPLOMACY_WAR_NO_WAR_WITH_MAJOR:0 "Emergency war declaration powers can be enacted if we are already at war with a credible threat (The enemy must have at least $LIMIT|Y0%$ of our industry, currently they have only $RATIO|Y0%$)."
- DIPLOMACY_WAR_NO_WAR_WARGOAL_NO_NEIGBOR_WARS:0 "We can only declare unjustified wars against our neighbors and countries that are already at war with our faction members and neighbor them."
+ DIPLOMACY_WAR_NO_WAR_WARGOAL_NO_NEIGBOR_WARS:0 "We can only declare unjustified wars against our neighbours and countries that are already at war with our faction members and neighbour them."
  DYPLOMACY_FILTER_CONTINENTS:0 "Continents"
  DYPLOMACY_FILTER_IDEOLOGIES:0 "Ideologies"
  DYPLOMACY_FILTER_FACTIONS:0 "Factions"
@@ -740,7 +740,7 @@
  faction_traitor_trade:0 "Faction traitor"
  our_liberators:0 "Our liberators"
  DIPLOMACY_PEACE_PROPOSAL_DURATION_TO_SHORT:0 "War has only been raging for $DURATION|Y$ of the $LIMIT|Y$ months needed for surrendering"
- DIPLOMACY_PEACE_PROPOSAL_NOT_WARSCORE_ENOUGH:0 "War score in favor for the winning side must be at least $LIMIT|%0Y$, currently $WARSCORE|%0Y$"
+ DIPLOMACY_PEACE_PROPOSAL_NOT_WARSCORE_ENOUGH:0 "War score in favour for the winning side must be at least $LIMIT|%0Y$, currently $WARSCORE|%0Y$"
  DIPLOMACY_PEACE_PROPOSAL_YOU_NOT_WAR_LEADER:0 "You are not war leader for the losing side."
  DIPLOMACY_PEACE_PROPOSAL_THEY_NOT_WAR_LEADER:0 "You need to surrender to winning side leader, $LEADER|H$"
  DIPLOMACY_DISMANTLE_FACTION_LEADER_NOT_ALONE:0 "Faction leader may only leave a faction containing only itself with puppets"
@@ -846,7 +846,7 @@
  WARGOAL_COST_VOLUNTEERS_VALUE:0 "$COUNTRY|Y$ is sending volunteers to our enemies: $VALUE|G$"
  WARGOAL_COST_OUR_MODIFIER:0 "$COUNTRY|Y$ modifiers: "
  WARGOAL_COST_THEIR_MODIFIER:0 "$COUNTRY|Y$ modifiers: "
- DR_COMMUNIST_NOT_NEIGHBOUR:0 "$THEM|Y$ is not neighboring the faction: "
+ DR_COMMUNIST_NOT_NEIGHBOUR:0 "$THEM|Y$ is not neighbouring the faction: "
  DR_ATTITUDE:0 "$US|Y$ $ATTITUDE|Y$ towards $THEM|Y$: "
  DR_PREFER_OTHER_FACTION:0 "$THEM|Y$ would rather be part of $FACTION|Y$: "
  AI_MESSAGE_CAT1_MES1:0 "Great job getting annexed there, $OTHER$. We're all proud of you."
