--- a/localisation/frontend_l_english.yml
+++ b/localisation/frontend_l_english.yml
@@ -105,7 +105,7 @@
  HALFYEAR:0 "Half Year"
  YEARLY:0 "Yearly"
  FE_HOTJOIN_LABEL:0 "Hotjoin"
- FE_COOP_LABEL:0 "Cooperative"
+ FE_COOP_LABEL:0 "Co-operative"
  FE_COOP_LABEL_DESC:0 "Enables multiple players controlling 1 nation"
  FE_HOTJOIN_TOOLTIP:0 "Allow players to hotjoin"
  FE_COOP_TOOLTIP:0 "Allow players to play the same country"
