--- a/localisation/goals_l_english.yml
+++ b/localisation/goals_l_english.yml
@@ -135,10 +135,10 @@
  scandinavian_expedition_desc:0 "We must do what we can to keep the war from French territory, and an expedition to Norway and northern Sweden will open a new front for Germany to consider. Much of Germany's steel comes from this region, and by cutting off the supply it may be possible to cripple their industry."
  scandinavian_expedition_short_desc:0 "§LOpen a new front for Germany from northern Scandinavia.§"
  grand_offensive:0 "Launch Grand Offensive"
- grand_offensive_desc:0 "While the Wehrmacht is busy contending with the brave Polish forces in the east, we must fulfil the obligations of our alliance and strike deeply into Germany! Occupy their industrial heartland in the Rhine Valley. That should get the attention of the OKW, and possibly force them to abandon their offensive into Poland."
+ grand_offensive_desc:0 "While the Wehrmacht is busy contending with the brave Polish forces in the east, we must fulfill the obligations of our alliance and strike deeply into Germany! Occupy their industrial heartland in the Rhine Valley. That should get the attention of the OKW, and possibly force them to abandon their offensive into Poland."
  grand_offensive_short_desc:0 "§LOccupy the German industry in the Rhine Valley.§"
  seize_berlin_fra:0 "Seize Berlin"
- seize_berlin_fra_desc:0 "We have no choice but to march on Berlin and plant the Tricolor on top of the Reichstag building. Let us bring this war to a swift conclusion before it has a chance to begin in earnest."
+ seize_berlin_fra_desc:0 "We have no choice but to march on Berlin and plant the Tricolour on top of the Reichstag building. Let us bring this war to a swift conclusion before it has a chance to begin in earnest."
  seize_berlin_fra_short_desc:0 "§LOccupy the German capital.§"
  occupy_libya_fra:0 "Occupy Italian Libya"
  occupy_libya_fra_desc:0 "Italy's colonial empire must be dismantled. Launch an offensive into Italian Libya from our Tunisian protectorate and occupy the Mediterranean coast. Vital objectives include the strategic port cities of Tripoli and Benghazi."
@@ -168,7 +168,7 @@
  operation_zet_desc:0 "The Japanese fascists are waging a war to conquer all of China. Needless to say, it is not in the interest of the Soviet Union to see them succeed. We must provide what support we can to the Chinese. With luck, the Imperial Japanese Army will be dragged into a quagmire that weakens their empire and keeps them occupied for the foreseeable future."
  operation_zet_short_desc:0 "§LOffer support to the Chinese in their war against Japan.§"
  annex_tannu_tuva:0 "Annex Tannu Tuva"
- annex_tannu_tuva_desc:0 "The Tuvan People's Republic is a member of the Soviet Union in all but name. Let us formalize the relationship by officially annexing them into our great nation."
+ annex_tannu_tuva_desc:0 "The Tuvan People's Republic is a member of the Soviet Union in all but name. Let us formalise the relationship by officially annexing them into our great nation."
  annex_tannu_tuva_short_desc:0 "§LIncorporate Tannu Tuva into the Soviet Union.§"
  second_vienna_award:0 "Second Vienna Award"
  second_vienna_award_desc:0 "The Treaty of Trianon unjustly stripped Hungary of more than two thirds of its territory. Losing Transylvania to the Romanians was particularly hard to stomach. A new order has been established in Europe, however, and we must petition our friends in Germany for the return of stolen Hungarian land."
@@ -205,7 +205,7 @@
  strengthen_vallo_alpino_short_desc:0 "§LSecure Italy's northern border by improving fortifications.§"
  industrialize_southern_italy:0 "Industrialise Southern Italy"
  industrialize_southern_italy_desc:0 "Northern Italy has always been the industrial heartland of our nation, while the south has remained poor and underdeveloped in comparison. We must take steps to close this economic division by building more industries in our southern states."
- industrialize_southern_italy_short_desc:0 "§LThe poor southern half of our country must be industrialized.§"
+ industrialize_southern_italy_short_desc:0 "§LThe poor southern half of our country must be industrialised.§"
  regia_marina:0 "The Regia Marina"
  regia_marina_desc:0 "The fortunes of Italy are directly tied to the Mediterranean, something the old Romans understood well. It is clear that the Regia Marina will play a critical role in any future conflicts against Britain or France. We must expand our dockyards to increase ship production."
  regia_marina_short_desc:0 "§LBuild more dockyards to increase naval productions.§"
@@ -226,7 +226,7 @@
  build_factories_short_desc:0 "§LConstruct new civilian factories to improve the economy.§"
  anglo_egypt_treaty:0 "The Anglo-Egyptian Treaty"
  anglo_egypt_treaty_desc:0 "Though nominally independent, Egypt has been under our protection since 1882. King Farouk wishes to formalise our relationship by treaty in light of the Italian military operations in Abyssinia. Egypt will join us as an ally, while we retain control over the Suez Canal and pledge to assist in their defence in case of war."
- anglo_egypt_treaty_short_desc:0 "§LFormalize Egypt independence while retaining them as an ally.§"
+ anglo_egypt_treaty_short_desc:0 "§LFormalise Egypt independence while retaining them as an ally.§"
  shadow_scheme:0 "The Shadow Scheme"
  shadow_scheme_desc:0 "The Air Ministry has developed a plan for the creation of 'shadow factories' - civilian factories that will be prepared and expanded so that they can more easily switch to military production in the event of war."
  shadow_scheme_short_desc:0 "§LPrepare and expand civilian factories for the eventuality of war.§"
@@ -240,14 +240,14 @@
  home_guard_desc:0 "France has been lost, and now Britain itself faces the threat of invasion. A suggestion has been put forward to establish a new defence organisation consisting of local volunteers. Many veterans from the previous war are too old for regular military service, but in this way they can still contribute to our defence."
  home_guard_short_desc:0 "§LEstablish a local volunteer defence organisation.§"
  operation_laudabiliter:0 "Operation Laudabiliter"
- operation_laudabiliter_desc:0 "The independence of Ireland is a stain upon British honor. For their own good, the Irish must be governed by a firm hand from London. Planning is underway for an invasion that will bring these stray sheep back into the fold."
+ operation_laudabiliter_desc:0 "The independence of Ireland is a stain upon British honour. For their own good, the Irish must be governed by a firm hand from London. Planning is underway for an invasion that will bring these stray sheep back into the fold."
  operation_laudabiliter_short_desc:0 "Invade Ireland and reconquer it for Britain."
  expand_the_luftwaffe:0 "Expand the Luftwaffe"
  expand_the_luftwaffe_desc:0 "The Treaty of Versailles did not permit Germany to maintain an air force, so we have had to build the Luftwaffe from the ground up in record time. We have made significant progress, but much remains to be done. Continue the expansion of the Luftwaffe and turn it into the finest air force in the world."
  expand_the_luftwaffe_short_desc:0 "§LIncrease the size of the Luftwaffe to prepare for the coming war.§"
  panzerwaffe:0 "Create the Panzerwaffe"
  panzerwaffe_desc:0 "Our new theories of mobile warfare necessitates the creation of a hard-hitting tank force. We must further increase the size of our Panzerwaffe in preparation for the inevitable coming war."
- panzerwaffe_short_desc:0 "§LForm an armored force by raising new panzer divisions for the Heer.§"
+ panzerwaffe_short_desc:0 "§LForm an armoured force by raising new panzer divisions for the Heer.§"
  reichsautobahn:0 "Finish the Reichsautobahn"
  reichsautobahn_desc:0 "Since its inception in 1933, the autobahn project has been a glorious success. The construction efforts have reduced unemployment, and the wide roads stand as a monument to Germany's economic recovery. Much work remains to be done, however."
  reichsautobahn_short_desc:0 "§LFinish construction of the autobahn by increasing infrastructure in key states.§"
@@ -255,7 +255,7 @@
  fortify_the_westwall_desc:0 "The Westwall runs parallel to France's vaunted Maginot Line, occupying much of the same ground as the Siegfried Line did in the previous Weltkrieg. Fortifying its defences will allow us to hold the border with fewer men, freeing up divisions to participate in any potential eastern campaigns."
  fortify_the_westwall_short_desc:0 "§LIncrease the defences of the Westwall by building new forts.§"
  operation_weserubung:0 "Operation Weserübung"
- operation_weserubung_desc:0 "Scandinavian iron is critical to the German war industry, and our supply must be safeguarded. We will preempt an Allied occupation of Norway by staging an invasion of our own. As a step towards realizing this goal, Denmark must also be occupied. This will have the added benefit of closing off the Baltic Sea to our enemies."
+ operation_weserubung_desc:0 "Scandinavian iron is critical to the German war industry, and our supply must be safeguarded. We will preempt an Allied occupation of Norway by staging an invasion of our own. As a step towards realising this goal, Denmark must also be occupied. This will have the added benefit of closing off the Baltic Sea to our enemies."
  operation_weserubung_short_desc:0 "§LInvade Denmark and Norway to secure the Scandinavian iron trade.§"
  operation_tannenbaum:0 "Operation Tannenbaum"
  operation_tannenbaum_desc:0 "Switzerland is a pimple on the face of Europe, and the Swiss themselves represent a wayward branch of the German people. They must be integrated into Greater Germany at any cost. Storm their mountain redoubts and put an end to this farce of a nation."
@@ -270,7 +270,7 @@
  operation_herkules_desc:0 "The British base on Malta has been a thorn in our side for too long. It continues to interfere with operations in North Africa, and as long as the island is under Allied control the Central Mediterranean will remain contested. We must see to its capture."
  operation_herkules_short_desc:0 "§LCapture Malta and deny its use as a base to the British.§"
  fall_grun:0 "Fall Grün"
- fall_grun_desc:0 "Circumvent the main British defences by establishing a beachhead on Ireland. When the island is under our control, Britain will be in a far more isolated position. From this new base our air and naval forces can pummel the stubborn British into submission!"
+ fall_grun_desc:0 "Circumvent the main British defences by establishing a beachhead in Ireland. When the island is under our control, Britain will be in a far more isolated position. From this new base our air and naval forces can pummel the stubborn British into submission!"
  fall_grun_short_desc:0 "§LConduct an invasion of Ireland to isolate Britain and secure new naval bases.§"
  operation_seelowe:0 "Operation Seelöwe"
  operation_seelowe_desc:0 "Our victory in the West can only be assured by the complete occupation of Great Britain. We must conduct a landing operation across the Channel and establish a beachhead on English soil. Our spearheads can then fan out into the countryside and push forward until all of Britain has been occupied. Their empire should then collapse like a house of cards. Vorwärts!"
