--- a/localisation/modifiers_l_english.yml
+++ b/localisation/modifiers_l_english.yml
@@ -336,7 +336,7 @@
  MODIFIER_PRODUCTION_FACTORY_MAX_EFFICIENCY_FACTOR_DESC:0 "£prod_eff_cap  Production Efficiency Cap determines the maximum value for your £prod_eff  Production Efficiency. It can be increased by £tech_mod Technologies."
  MODIFIER_PRODUCTION_FACTORY_EFFICIENCY_GAIN_FACTOR:0 "£prod_eff Production Efficiency growth"
  MODIFIER_PRODUCTION_FACTORY_EFFICIENCY_GAIN_FACTOR_DESC:0 "Modifies how much Efficiency is gained by mass-producing items in the same Production line."
- MODIFIER_AMPHIBIOUS_INVASION:0 "Amphibious invasion speed"
+ MODIFIER_AMPHIBIOUS_INVASION:0 "Amphibious Invasion Speed"
  MODIFIER_AMPHIBIOUS_INVASION_DESC:0 "How fast units move ashore when doing amphibious invasion."
  MODIFIER_PARTISAN_EFFECT_FACTOR:0 "Effect of our partisans"
  MODIFIER_PARTISAN_EFFECT_FACTOR_DESC:0 "How efficiently our partisans organise against enemies that have occupied our territories."
@@ -435,7 +435,7 @@
  MODIFIER_AIR_CAS_GROUND_ATTACK_FACTOR:0 "CAS attack"
  MODIFIER_AIR_CAS_GROUND_ATTACK_FACTOR_DESC:0 "Bonus to close air support attacks on ground troops."
  MODIFIER_AIR_CAS_PRESENT_FACTOR:0 "Ground support"
- MODIFIER_AIR_CAS_PRESENT_FACTOR_DESC:0 "Having well-coordinated planes helping out in combat lets your troops fight better."
+ MODIFIER_AIR_CAS_PRESENT_FACTOR_DESC:0 "Having well co-ordinated planes helping out in combat lets your troops fight better."
  MODIFIER_AIR_TAC_STRATEGIC_BOMBING_FACTOR:0 "TAC Bombing"
  MODIFIER_AIR_TAC_STRATEGIC_BOMBING_FACTOR_DESC:0 "Bonus to Tactical bombers performing regular strategic bombing."
  MODIFIER_TRAINING_TIME_FACTOR:0 "Training time"
@@ -463,7 +463,7 @@
  MODIFIER_LAND_REINFORCE_RATE_DESC:0 "Chance per hour that units in reserve are able to actively join the fight."
  MODIFIER_DRIFT_DEFENCE_FACTOR:0 "Ideology drift defence"
  MODIFIER_DRIFT_DEFENCE_FACTOR_DESC:0 "Reduces the effect of foreign powers trying to meddle with politics."
- MODIFIER_NAVAL_COORDINATION:0 "Fleet Coordination"
+ MODIFIER_NAVAL_COORDINATION:0 "Fleet Co-ordination"
  MODIFIER_NAVAL_COORDINATION_DESC:0 "How quickly the fleet can gather or disperse when a target is found or when switching missions."
  MODIFIER_PLANNING_SPEED:0 "Planning Speed"
  MODIFIER_PLANNING_SPEED_DESC:0 "Increases the rate at which a division's planning bonus is accumulated."
