--- a/localisation/multiplayer_l_english.yml
+++ b/localisation/multiplayer_l_english.yml
@@ -105,7 +105,7 @@
  OOS_40:0 "Exported resources"
  OOS_41:0 "Produced resources pool"
  OOS_42:0 "Produced resources pool"
- OOS_43:0 "Number of provinces in Theatres"
+ OOS_43:0 "Number of provinces in theatres"
  OOS_44:0 "Total timed activity progress"
  OOS_45:0 "Total political power"
  OOS_46:0 "AI Countries"
