--- a/localisation/production_l_english.yml
+++ b/localisation/production_l_english.yml
@@ -157,7 +157,7 @@
  PRODUCTION_UNITS_PER_MONTH:0 "$UNITS|Y$ units per month"
  PRODUCTION_UNITS_PER_YEAR:0 "$UNITS|Y$ units per year"
  PRODUCTION_FACTORY_ASSIGN_DESC:1 "Click to assign £factory_item $FACTORIES|Y$ §YMilitary Factories§! to this Production Line. This would give a base production output of £production_cost $OUTPUT|Y$ per day.\nThe total output will be affected by §YResources§!, §YProduction Efficiency§! and other §YProduction modifiers§!."
- PRODUCTION_DOCKYARD_ASSIGN_DESC:1 "Click to assign £naval_factory_icon $FACTORIES|Y$ §YNaval Dockyards§! to this Production Line. This wwill give a base production output of £navprod_cost $OUTPUT|Y$ per day. \nThe total output will be affected by §YResources§! and other §YProduction modifiers§!."
+ PRODUCTION_DOCKYARD_ASSIGN_DESC:1 "Click to assign £naval_factory_icon $FACTORIES|Y$ §YNaval Dockyards§! to this Production Line. This will give a base production output of £navprod_cost $OUTPUT|Y$ per day. \nThe total output will be affected by §YResources§! and other §YProduction modifiers§!."
  PRODUCTION_BASE_OUTPUT:0 "Base output: $VALUE|Y$ x $MUL|Y$"
  PRODUCTION_EFF_GAIN_HINT:0 "§YEfficiency gain speed modified by:§!"
  CARRIER_AIR_WING_COMPOSITION_TITLE:0 "Set the default composition of Air Wings for this Carrier"
