--- a/localisation/theater_l_english.yml
+++ b/localisation/theater_l_english.yml
@@ -62,7 +62,7 @@
  THEATRE_PIN_AREA:0 "Pin area"
  THEATRE_PIN_AREA_DESC:0 "Pinning an area or theatre means it sticks around even when not selected for quick access."
  THEATRE_DESC_DESC:0 "Selecting a theatre shows the commands groups active in this theatre."
- THEATRE_THEATRE:0 "Rheatre: §Y$NAME$§!"
+ THEATRE_THEATRE:0 "Theatre: §Y$NAME$§!"
  THEATRE_STRAT_AREA:0 "Strategic area: §Y$NAME$§!"
  THEATRE_UNIT:0 "The theatre has §Y1§! division"
  THEATRE_UNITS:0 "The theatre has $N|Y$ divisions"
