--- a/localisation/triggers_l_english.yml
+++ b/localisation/triggers_l_english.yml
@@ -37,8 +37,8 @@
  TRIGGER_HAS_IDEA_NAVAL_MANUFACTURER:0 "Has ship designer $IDEA|H$"
  TRIGGER_HAS_NOT_IDEA_AIRCRAFT_MANUFACTURER:0 "Does not have aircraft designer $IDEA|H$"
  TRIGGER_HAS_IDEA_AIRCRAFT_MANUFACTURER:0 "Has aircraft designer $IDEA|H$"
- TRIGGER_HAS_NOT_IDEA_MATERIEL_MANUFACTURER:0 "Does not have material designer $IDEA|H$"
- TRIGGER_HAS_IDEA_MATERIEL_MANUFACTURER:0 "Has material designer $IDEA|H$"
+ TRIGGER_HAS_NOT_IDEA_MATERIEL_MANUFACTURER:0 "Does not have materiel designer $IDEA|H$"
+ TRIGGER_HAS_IDEA_MATERIEL_MANUFACTURER:0 "Has materiel designer $IDEA|H$"
  TRIGGER_HAS_NOT_IDEA_INDUSTRIAL_CONCERN:0 "Does not have industrial concern $IDEA|H$"
  TRIGGER_HAS_IDEA_INDUSTRIAL_CONCERN:0 "Has industrial concern $IDEA|H$"
  TRIGGER_HAS_NOT_IDEA_THEORIST:0 "Does not have theorist $IDEA|H$"
