--- a/localisation/autonomy_l_english.yml
+++ b/localisation/autonomy_l_english.yml
@@ -28,7 +28,7 @@
  LL_TO_PUPPET_FREEDOM_EFFECT:0 "Overlord lend leasing to subject"
  MONTHLY_LL_FREEDOM_TO_PUPPET:0 "$FLAG$ $VALUE|-2$"
  MONTHLY_LL_FREEDOM_TO_MASTER:0 "$VALUE|+2$"
- MONTHLY_LL_FREEDOM_VALUE_DESC:0 "Mothly impact on autonomy in case of full delivery"
+ MONTHLY_LL_FREEDOM_VALUE_DESC:0 "Monthly impact on autonomy in case of full delivery"
  MONTHLY_LL_FREEDOM_DESC:0 "Monthly after full delivery $COUNTRY|H$ gets £autonomy_texticon $VALUE|H+=2$ "
  MONTHLY_REQUEST_LL_TO_MASTER:0 "§RRequesting lend lease from puppet can give them more autonomy§!"
  MONTHLY_REQUEST_LL_TO_PUPPET:0 "§RRequesting lend lease from master might lose autonomy§!"
@@ -47,10 +47,10 @@
  ADD_AUTONOMY_SCORE_DETAILED_DESC:0 "Add £autonomy_texticon $VALUE|H2$ to the $COUNTRY|H$"
  COLONIAL_FORCES_GENERAL_DESCRIPTION:0 "§GClick to view templates of subjects§!\nArmies created with colonial templates can include certain amount of subject troops depending on its autonomy level."
  COLONIAL_FORCES_NO_SUBJECTS:1 "§RWe have no subjects we could recruit colonial templates from§!"
- FOREIGN_TEMPLATE_DESC:0 "This is a $COUNTRY|H$ template, which is our subject. We can duplicate template and create colonial forces on its base. Colonial template will use its parent troops, depending on autonomy level."
- COLONIAL_TEMPLATE_DESC:0 "This is $COUNTRY|H$ colonial template. Colonial template will use its parent troops, depending on autonomy level."
+ FOREIGN_TEMPLATE_DESC:0 "This is a $COUNTRY|H$ template, which is our subject. We can duplicate this template and create colonial forces on its base. Colonial templates will use their parent troops, depending on autonomy level."
+ COLONIAL_TEMPLATE_DESC:0 "This is $COUNTRY|H$ colonial template. Colonial templates will use their parent troops, depending on autonomy level."
  CONSTRUCTION_MASTER_BUILDING_LEVELS:0 "$MASTER|H$ is currently building $LVL|H$ levels of $BUILDING|H$ for us."
- CONSTRUCTION_MASTER_BUILDING_REDUCE_LEVELS:0 "We are allowed to reduce this construction level only by $LVL|R$."
+ CONSTRUCTION_MASTER_BUILDING_REDUCE_LEVELS:0 "We are allowed to reduce this construciton level only by $LVL|R$."
  CONSTRUCTION_MASTER_BUILDING_CANT_REDUCE:0 "§RWe are not allowed to reduce the level or cancel this construction.§!"
  CONSTRUCTION_INFO_MASTER:0 "This construction is built on the $WHO|H$ territory. If we don't use all factories, they can contribute using theirs."
  CONSTRUCTION_INFO_SUBJECT:0 "This construction is built for us by the $WHO|H$. If they don't use all factories, we can contribute using ours."
