--- a/localisation/core_l_english.yml
+++ b/localisation/core_l_english.yml
@@ -31,7 +31,7 @@
  IS_ATPEACE:0 "At Peace"
  IS_ATWAR:0 "At War"
  RESEARCH_TIME_TOOLTIP:0 "Time to Research: $DAYS|Y$ days "
- WAIT_FOR_HOTJOIN:0 "Please wait while the host sets up the game for you. Once you got a savegame transferred to you, you can choose a country and join the game."
+ WAIT_FOR_HOTJOIN:0 "Please wait while the host sets up the game for you. Once you get a save game transferred to you, you can choose a country and join the game."
  HOST_PREPARING_GAME:0 "Please wait while the host\nprepares the game for you."
  HOTJOIN_CONFIRM:0 "Confirm"
  HOTJOIN_ACCEPT:0 "Accept hotjoin request"
@@ -119,9 +119,9 @@
  OPERATION_SELECT:0 "§GClick to select§!"
  OPERATION_DESELECT:0 "§GClick to deselect§!"
  CONFIRMUNASSIGNTEXT:0 "Are you sure you want to UNASSIGN $NAME|H$?"
- CONFIRDISBANDGROUPTEXT:1 "All §GArmies§! that won't have any §YDivisions§! will be automatically §RRemoved§! and all orders will be §RLost§!!"
+ CONFIRDISBANDGROUPTEXT:1 "All §GArmies§! that won't have any §YDivisions§! will be automaticly §RRemoved§! and all orders will be §RLost§!!"
  REASSIGN_FULL_ORDERS_GROUP_HEADER:1 "Reassign Armies"
- REASSIGN_FULL_ORDERS_GROUP_TEXT:1 "All §GArmies§! that won't have any §YDivisions§! will be automatically §RRemoved§! and all orders will be §RLost§!!\n\nAre you sure you want to §RReassign§! all units to other §GArmy§!?"
+ REASSIGN_FULL_ORDERS_GROUP_TEXT:1 "All §GArmies§! that won't have any §YDivisions§! will be automaticly §RRemoved§! and all orders will be §RLost§!!\n\nAre you sure you want to §RReassign§! all units to other §GArmy§!?"
  CONFIRMDELETE_ORDERS_GROUP_HEADER:1 "Remove Army"
  CONFIRMDELETE_ORDERS_GROUP_TEXT:1 "All units from this Army will become unassigned, and all painted orders will be deleted.\nAre you sure you want to §RRemove§! the §RArmy§!?"
  CONFIRMCHANGE_GROUP_LEADER:0 "Reassign the Commander"
@@ -129,7 +129,7 @@
  CONFIRMCHANGE_GROUP_LEADER_IN_TRANSFER_TEXT:1 "$NAME|H$ is already assigned to another §GArmy§! that has been sent as a §Yvolunteers§!.\nAre you sure you want to §RReassign§! the §GCommander§!?"
  CONFIRMCHANGE_NAVY_LEADER:0 "Reassign the Commander"
  CONFIRMCHANGE_NAVY_LEADER_TEXT:0 "$NAME|H$ is already assigned to another §GFleet§! and will be reassigned.\nAre you sure you want to §RReassign§! the §GCommander§!?"
- CONFIRMCHANGE_UNIT_TEMPLATE:0 "Division Template change"
+ CONFIRMCHANGE_UNIT_TEMPLATE:0 "Divison Template change"
  CONFIRMCHANGE_UNIT_TEMPLATE_SINGLE:0 "Are you sure you want to §RChange§! the §GDivision Template§! to $TEMPLATE|H$ for this §GUnit§!? It may take a while for the new equipment to arrive."
  CONFIRMCHANGE_UNIT_TEMPLATE_MULTI:0 "Are you sure you want to §RChange§! the §GDivision Template§! to $TEMPLATE|H$ for these $COUNT|Y$ §GUnits§!? It may take a while for the new equipment to arrive."
  CONFIRMCHANGE_UNIT_TEMPLATE_EQUIPMENT_NEEDED_ENOUGHT:1 "$AMOUNT|0H$ $EQUIPMENT$ (§G$STOCK|0*$ available§!)"
@@ -141,7 +141,7 @@
  MENU_BAR_DISK_QUOTA:0 "$AVAIL$ free of $TOTAL$"
  FE_CONTENT:0 "Content"
  DLC_NEWITEMINSTALLED_TITLE:0 "New item installed"
- DLC_NEWITEMINSTALLED_DESC:0 "$NAME$ has been installed, you should restart EU4."
+ DLC_NEWITEMINSTALLED_DESC:0 "$NAME$ has been installed, you should restart HOI4."
  DLC_AVAILABLE_TITLE:0 "Available content"
  DLC_AVAILABLE_DESC:0 "There is $NUM|H$ available DLCs awaiting your attention."
  CONTENTVIEW_HEADER:0 "Installed Content"
@@ -190,7 +190,7 @@
  DEFAULT:0 "Default"
  DELETE_NAVY:0 "Delete Navy"
  ACHIEVEMENTS_DISABLED_MODIFIED_SAVE:0 "§YSave game belongs to another user or is edited. Achievements will be disabled.§!"
- ACHIEVEMENTS_DISABLED_MODIFIED_GAME:0 "§YEU4 is running a mod or is altered in other means. Achievements will be disabled.§!"
+ ACHIEVEMENTS_DISABLED_MODIFIED_GAME:0 "§YHOI4 is running a mod or is altered in other means. Achievements will be disabled.§!"
  ACHIEVEMENTS_DISABLED_WRONG_PLAYER:0 "§YThis game is meant to be played as $COUNTRY$. Achievements will be disabled.§!"
  ACHIEVEMENTS_ENABLED:0 "Achievements enabled."
  SAVEITEM_PLAYER_COUNTRY:0 "Player: $COUNTRY$"
@@ -380,14 +380,14 @@
  NAVAL_GUI_BTN_NEW_FLEET_FROM_EXISTING:0 "§HCreate new fleet§!"
  NAVAL_GUI_BTN_NEW_FLEET_FROM_EXISTING_DESC:0 "Create a new fleet with ships from this fleet"
  SHIP_ENGAGEMENT_BUTTON_FIRE_AT_WILL:0 "§HCurrent engagement rule - §RFire at will!§!§!"
- SHIP_ENGAGEMENT_BUTTON_FIRE_AT_WILL_DESC:0 "The fleet will always engage the enemy. Moving through the province with spotted enemy or pending battle will make the fleet to engage."
+ SHIP_ENGAGEMENT_BUTTON_FIRE_AT_WILL_DESC:0 "The fleet will always engage the enemy. Moving through a province with a spotted enemy or pending battle will cause the fleet to engage."
  SHIP_ENGAGEMENT_BUTTON_HOLD_FIRE:0 "§HCurrent engagement rule - §GDo not engage§!§!"
- SHIP_ENGAGEMENT_BUTTON_HOLD_FIRE_DESC:0 "The fleet will try to avoid engaging the enemy so it can move through the provinces including enemy ships and battles.\nUnless... we are spotted and the enemy shoot first."
+ SHIP_ENGAGEMENT_BUTTON_HOLD_FIRE_DESC:0 "The fleet will try to avoid engaging the enemy so it can move through provinces that include enemy ships and battles.\nUnless... we are spotted and the enemy shoot first."
  SHIP_ENGAGEMENT_BUTTON_GENERAL_DESC:0 "\n--------------\n§GDo not engage§! will work only if:\n - Fleet has no orders\n - Fleet is patrolling\n"Do not engage" will auto-enable when fleet has been defeated and running to the home base to be repaired."
  SHIP_ENGAGEMENT_MAP_ICON:0 "The fleet engagement rule is to §GDo not engage§! the enemies."
  NAVAL_CAN_NOT_MOVE_THERE:0 "§ROur fleet does not have access to this region§!"
  NAVAL_INVASION_CLICK_TO_ASSIGN_FLEETS:0 "§GClick§! to assign the fleets to that §YInvasion§!."
- NAVAL_INVASION_MOVE_MOUSE_OVER_INVASION:1 "Move the mouse over the §YInvasion§! arrow, and §GClick§! to assign the fleets to it.\nIf you did not painted the invasion order yet, you can do it by selecting the §YArmy§! and use the §GNaval Invasion Order§! tool."
+ NAVAL_INVASION_MOVE_MOUSE_OVER_INVASION:1 "Move the mouse over the §YInvasion§! arrow, and §GClick§! to assign the fleets to it.\nIf you have not painted the invasion order yet, you can do so by selecting the §YArmy§! and using the §GNaval Invasion Order§! tool."
  NAVAL_PROV_DESC_ADD_REGION:0 "§GRight-click§! to §Yadd§! region."
  NAVAL_PROV_DESC_REMOVE_REGION:0 "§GShift+Right-click§! to §Yremove§! region."
  NAVAL_PROV_DESC_HOLD_AND_GO_TO:0 "§GCtrl+Right-click§! to cancel mission, and move to location."
@@ -396,9 +396,9 @@
  NAVAL_PROV_DESC_FORMATION_SPREAD:0 "$SPR|%$"
  NAVAL_FORMATION_SPREAD_TITLE:0 "§HFormation Spread§!\n"
  NAVAL_EXCORT_FORMATION_SPREAD_TITLE:0 "§HEscort formation spread§!\n"
- NAVAL_FORMATION_SPREAD_DESC:0 "How spread out this fleet is. A more spread out fleet will cover more area which helps to locate the enemy, but will take time to assemble for a larger battle when required. Spread is mainly affected by what mission you have selected."
+ NAVAL_FORMATION_SPREAD_DESC:0 "How spread out this fleet is. A more spread out fleet will cover a larger area which helps to locate the enemy, but will take time to assemble for a large battle when required. Spread is mainly affected by what mission you have selected."
  NAVAL_MISSIONS_LOCAL_HEADER:0 "§HNaval missions:§!"
- NAVAL_MISSION_THIS_IS_LAND_REGION:0 "There is no sea provinces in this region."
+ NAVAL_MISSION_THIS_IS_LAND_REGION:0 "There are no sea provinces in this region."
  HOME_BASE_TITLE:0 "§HHome Base§!\n"
  HOME_BASE_DESC:0 "The base this fleet is carrying out missions from.\n§YCTRL§!+§GRight-click§! a naval base to move and set a new §Ghome base§!."
  NAVAL_PROV_DESC_MOVE_TO:0 "§GRight-click§! to §Ymove§! to province."
@@ -421,7 +421,7 @@
  CHANGE_NAVAL_MODE_DESC:0 "Toggle mode between direct movement control and giving missions in areas"
  CREATE_NEW_FLEET:0 "Create New Fleet"
  CREATE_NEW_FLEET_DISABLED:0 "To create a new fleet you need at least two ships in one fleet."
- CREATE_NEW_FLEET_DISABLED_IN_COMBAT:0 "To create new fleet should not be in combat."
+ CREATE_NEW_FLEET_DISABLED_IN_COMBAT:0 "To create a new fleet, ships should not be in combat."
  CREATE_NEW_FLEET_DESC:0 "Create a new empty fleet"
  SPLIT_NAVY:0 "Split the fleet"
  EQUALS:0 "equals"
@@ -456,7 +456,7 @@
  NAVAL_COMBAT_AIRWING_TOOLTIP_DAMAGED_ENTRY:1 "\n   $PERC|G%$ of $NAVY|Y$"
  NAVAL_COMBAT_AIRWING_TOOLTIP_DAMAGED_LAST_HIT:0 " (§GDid last hit§!)"
  NAVAL_COMBAT_RECEIVED_CRITICALS:0 "Received $NUM|R$ critical hits."
- NAVAL_COMBAT_CRITICALS_DESCRITPION:0 "§gShips may receive critical hits that are way stronger than usual hits. Mainly because of exploded ammo storage or fuel tanks.\nIncreasing the ship reliability will reduce the chance that received hit becomes critical.\nThe highest critical chance is done by torpedoes.§!"
+ NAVAL_COMBAT_CRITICALS_DESCRITPION:0 "§gShips may receive critical hits that are stronger than usual hits, mainly because of exploded ammo storage or fuel tanks.\nIncreasing the ship reliability will reduce the chance that a received hit becomes critical.\nThe highest critical chance is done by torpedoes.§!"
  NAVAL_COMBAT_HIDDEN_SUBS:0 "§RExact position is unknown.§!\n"
  NAVAL_TRANSFER_BLOCKED:0 "§RYou can't transfer ships between fleets in different naval bases§!"
  CARRIER_PLANES_EVAC_STATUS_DESTROYED:0 "No evacuation air base found - its aircrafts have been lost."
@@ -467,7 +467,7 @@
  AIR_SUPERIORITY_BAR_TOOLTIP:0 "§YAir superiority:§! $PERC$"
  AIR_SUPERIORITY_BAR_OUR:0 "\nOur air power: $OUR$"
  AIR_SUPERIORITY_BAR_ENEMY:0 "\nEnemy air power: $ENEMY$"
- AIR_SUPERIORITY_BAR_EXPLANATION:0 "Each type of an air wing has a defined superiority power value, that describes how effective it is in domination on the sky. The superiority power in the region comes from all of your (and your allies) active air wings in that region. The more air wings the higher value, but be aware that the value is also reduced with low region coverage. So remember to rebase your air wings to get the most optimal region coverage."
+ AIR_SUPERIORITY_BAR_EXPLANATION:0 "Each type of an air wing has a defined superiority power value, that describes how effective it is in domination on the sky. The superiority power in the region comes from all of your (and your allies) active air wings in that region. The more air wings the higher the value, but be aware that the value is also reduced with low region coverage. So remember to rebase your air wings to get the most optimal region coverage."
  AIR_SUPERIORITY_AA_REDUCTION_ENEMY:0 "Reduced by the enemy anti air in region = $RED|R1$"
  AIR_SUPERIORITY_AA_REDUCTION_OUR:0 "Reduced by our anti air in region = $RED|G1$"
  AIR_SUPERIORITY_TYPE_1:0 "Active Fighters"
@@ -558,7 +558,7 @@
  UNITS_VIEW_BTN_DRAW_DEFENCE:1 "§HFront Line§!\n - §GClick§! on one of the borders against another country to set the assigned front along entire border.\n - §GRight-click and drag the mouse§! on one of the borders against another country to set the front in a shorter interval.\n - §GRight-click and drag the mouse§! on the existing frontline endings to edit them.\n\nFront lines are the start point of attacks into enemy territory towards Offensive Lines, but also allows you to quickly position Divisions along a foreign border."
  UNITS_VIEW_BTN_DRAW_FALLBACK:1 "§HFallback line§!\n - §GRight-click and drag the mouse§! on the friendly territory to draw the §YSingle use§! defensive order.\n\nFallback lines are useful for positioning Divisions for defence, for example, behind a river, or somewhere else in friendly territory."
  UNITS_VIEW_BTN_AREA_DEFENSE:1 "§HGarrison Area§!\n - §GClick§! on states to add/remove them from the army's order.\nAn Army with this order cannot have other types at the same time.\n\nDivisions assigned to an Army with this order will spread out over the assigned area to guard important cities, ports or other objects as well as handle local Resistance and minor enemy presence."
- UNITS_VIEW_BTN_DRAW_NAVAL_INV:0 "§HNaval Invasion Order§!\nStep 1) §GClick§! on one of the highlighted provinces to set the invasion source.\nStep 2) §GRight-click§! on the desired coast province(s) to invade.\nOnce the plan is activated, the invasion will begin to prepare and reserve convoys from your countries pool."
+ UNITS_VIEW_BTN_DRAW_NAVAL_INV:0 "§HNaval Invasion Order§!\nStep 1) §GClick§! on one of the highlighted provinces to set the invasion source.\nStep 2) §GRight-click§! on the desired coast province(s) to invade.\nOnce the plan is activated, the invasion will begin to prepare and reserve convoys from your country's pool."
  UNITS_VIEW_BTN_DRAW_PARADROP:0 "§HParatroop Order§!\nStep 1) §GClick§! on our air base to designate the takeoff point. The air base must have available transport planes.\nStep 2) §GRight-click§! on the province that is in range of the local transport planes, to designate the drop location.\n§gRemember that only the units with paratroop ability will be transported.§!"
  UNITS_VIEW_BTN_DRAW_OFFENCE_FRONT_LINE_FIRST:0 "§RYou have to create a Front line first.§!"
  UNITS_VIEW_BTN_RESHAPE_NOTHING:0 "§RNothing to Edit.§!"
@@ -596,7 +596,7 @@
  CARRIER_SHIP_ICON:1 "This air base is a §HFleet§! containing §HAircraft Carriers§!.\n§gClick to select§!"
  ASSIGN_LEADER_TITLE:0 "Select Commander for $UNIT|Y$"
  DIMININSHING_RETURNS:0 "At this popularity, effects are scaled to $SCALE|Y2%$"
- LEADER_NOT_IN_PORT:0 "§ROn sea§!"
+ LEADER_NOT_IN_PORT:0 "§RAt sea§!"
  LEADER_SKILL_DESC:0 "Skill: $S|Y$"
  LEADER_SKILL_WITH_PROGRESS:0 "Skill: $SKILL|Y$ ($PROGRESS|%Y0$)"
  LEADER_RANK_WITH_PROGRESS:0 "$RANK|Y$ ($PROGRESS|%Y0$)"
@@ -617,7 +617,7 @@
  TOTAL_MODIFIER_IS:0 "Modified to $VALUE|Y%$ due to"
  NO_ORG_GAIN_IN_COMBAT:0 "There is no gain of organisation while in combat."
  NO_ORG_GAIN_IN_NAVAL_INVASION:0 "There is no gain of organisation during naval invasion."
- ORG_OVER_SUPPLY_SOFT_CAP:0 "organisation is over the supply soft-cap of $CAP|Y$, organisation will be reduced by $LOSS|R$ each hour."
+ ORG_OVER_SUPPLY_SOFT_CAP:0 "Organisation is over the supply soft-cap of $CAP|Y$, organisation will be reduced by $LOSS|R$ each hour."
  MAX_EXPERIENCE_TEXT:0 "Experience is capped at $VAL|Y0$."
  acquire_intel:0 "Acquire Intel"
  acquire_intel_desc:0 "$SPY|H$ is attempting to Acquire Intel in $TARGET|Y$."
@@ -779,7 +779,7 @@
  BUTTON_DETAILS:0 "Details"
  BUTTON_OK:0 "Ok"
  CONFIRM_START_TRAINING:0 "Start Exercise"
- CONFIRM_START_TRAINING_DESC:1 "Do you want this army to start a military exercise?\nUnits will slowly gain experience while conducting an exercise and it will also add national military experience. Units cannot progress past $MAX|Y$ from exercise. Setting an army to exercise will lower each units' org until the exercise stops. Units in exercise cannot move and suffer $ATTRITION|R%0$ attrition."
+ CONFIRM_START_TRAINING_DESC:1 "Do you want this army to start a military exercise?\nUnits will slowly gain experience while conducting an exercise and it will also add national military experience. Units cannot progress past $MAX|Y$ from exercise. Setting an army to exercise will lower each unit's org until the exercise stops. Units in exercise cannot move and suffer $ATTRITION|R%0$ attrition."
  CONFIRM_STOP_TRAINING:0 "Stop Exercise"
  CONFIRM_STOP_TRAINING_DESC:1 "Do you want this army to stop the exercise?\nYou won't gain anymore experience and the units will slowly regain their org."
  TRAINING_ATTRITION:0 "Exercise: $VALUE$"
@@ -1020,7 +1020,7 @@
  FIND:0 "Find"
  TYPE_HERE:0 "Type here"
  GOTO_CAPITAL:0 "Go Home"
- NAVY_REPAIR_POLICY_SPLIT_DESC:1 "Allow to split option makes the most damaged ships to split off on its own and return to the home base for repairs, while the main fleet is still doing its current task. The risk is, that the detached ships can be attacked on its way home. When the detached ships are fully repaired, they will return to the main fleet and merge back.\nNotice that the amount of ships to split off depends on the priority settings, as well as the severity of a single ship damage."
+ NAVY_REPAIR_POLICY_SPLIT_DESC:1 "Allow to split option makes the most damaged ships split off on their own and return to the home base for repairs, while the main fleet is still doing its current task. The risk is that the detached ships can be attacked on their way home. When the detached ships are fully repaired, they will return to the main fleet and merge back.\nNotice that the amount of ships to split off depends on the priority settings, as well as the severity of a single ship damage."
  NAVY_REPAIR_NOW_CANCEL:1 "§RCancel§! the repair task."
  NAVY_REPAIR_NOW_CANCEL_RETURN:0 "\nReturn and merge back with the $FLEET|H$."
  NAVY_REPAIR_NOW:1 "§HRepair now!§!\nThe fleet will return to the home base for repairs.\n§GClick§! to send. It will come back to the current task after it is fully repaired.\n§GCtrl+Click§! to send. It will stay in the naval base after that."
@@ -1048,7 +1048,7 @@
  SORT_BY_DATE:0 "Sort by Date"
  SORT_BY_COUNTRY:0 "Sort by Country"
  SHOW_WARS:0 "Show all currently active Wars"
- WAR_HAS_MAJOR:0 "War contains at least one Major County"
+ WAR_HAS_MAJOR:0 "War contains at least one Major Country"
  CLICK_FOR_WAR_OVERVIEW:0 "Click to open the war overview for $WAR_NAME|Y$"
  BROWSER_BACK:0 "Back"
  BROWSER_FORWARD:0 "Forward"
