--- a/localisation/designer_l_english.yml
+++ b/localisation/designer_l_english.yml
@@ -38,7 +38,7 @@
  DESIGNER_ARMORED_LABEL:0 "Armoured"
  DESIGNER_ARMORED_RATIO:0 "Armoured: $VALUE|%Y$"
  DESIGNER_RESET:0 "Reset"
- DESIGNER_RESET_DESC:0 "Reset current changes that was done to the division template."
+ DESIGNER_RESET_DESC:0 "Reset current changes that were done to the division template."
  DESIGNER_ARMY_EXPERIENCE:0 "$VALUE|Y$ £army_experience"
  DESIGNER_NAVY_EXPERIENCE:0 "$VALUE|Y$ £navy_experience"
  DESIGNER_AIR_EXPERIENCE:0 "$VALUE|Y$ £air_experience "
@@ -66,8 +66,8 @@
  DESIGNER_TEMPLATE_NAME_TIP:0 "Division based on $NAME|Y$ template"
  DESIGNER_EMPTY_REGIMENT:0 "§RYou need to add a Combat battalion to create a new Division Template§!"
  DESIGNER_EMPTY_NAME:0 "§RDivision template should not have empty name§!"
- DESIGNER_SUPPORT_COLUMN_TITLE:0 "Support Companies. These are support troops keep behind the frontline troops and help out.\n\nYou can only select one of each type and Support Companies do not affect the §YMax Speed§! of the Division (other than through terrain bonuses), and do not increase its §YCombat Width§!."
- DESIGNER_MAIN_COLUMN_TITLE:0 "Combat Companies are your frontline troops.\n\nEach column is a Regiment of a specific base type like §YArmor§!, §YInfantry§! or §YMotorized Troops§!. The topmost type decides what else you can put in that Regiment column. The more combat Companies you have the bigger your §YCombat Width§! and the fewer of these divisions you will be able to fit into the same battle."
+ DESIGNER_SUPPORT_COLUMN_TITLE:0 "Support Companies. These are support troops that keep behind the frontline troops and help out.\n\nYou can only select one of each type and Support Companies do not affect the §YMax Speed§! of the Division (other than through terrain bonuses), and do not increase its §YCombat Width§!."
+ DESIGNER_MAIN_COLUMN_TITLE:0 "Combat Companies are your frontline troops.\n\nEach column is a Regiment of a specific base type like §YArmour§!, §YInfantry§! or §YMotorised Troops§!. The topmost type decides what else you can put in that Regiment column. The more combat Companies you have the bigger your §YCombat Width§! and the fewer of these divisions you will be able to fit into the same battle."
  REINFORCE_WITH_RESEARCHED_EQUIPMENT:0 "Activate to reinforce with newly researched equipment"
  REINFORCE_WITH_EQUIPMENT:0 "Activate to reinforce with this equipment"
  DESIGNER_EQUIPMENT_CHANGE:2 "$UNITS|Y$ divisions are using this template.\nThe requirements for $EQ|Y$ will change by $TOT|R$ in total.\nWe have $STOCK|Y$ in storage.\nIf we accept the changes to this template, we estimate to have $END$ in storage."
