--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -10,7 +10,7 @@
  sour_loser:0 "Bitter Loser"
  sour_loser_desc:0 "Bitterness over defeat in the Great War dominates the politics of this nation."
  porsche:0 "Porsche"
- porsche_desc:0 "Porsche favors tanks with heavy armor."
+ porsche_desc:0 "Porsche favours tanks with heavy armour."
  henschel:0 "Henschel"
  henschel_desc:1 "Henschel were responsible for all mass-produced Tiger models, tanks which, after early reliability problems were solved, performed remarkably well."
  GER_MAN:0 "MAN"
@@ -28,11 +28,11 @@
  junkers:0 "Junkers"
  junkers_desc:0 "Junkers is most famous for having developed the Stuka dive bomber."
  todt:0 "Fritz Todt"
- todt_desc:0 "Fritz Todt, a German engineer, was the founder of Organization Todt. He will increase the build speed of Civilian Industrial projects."
+ todt_desc:0 "Fritz Todt, a German engineer, was the founder of Organisation Todt. He will increase the build speed of Civilian Industrial projects."
  speer:0 "Albert Speer"
  speer_desc:0 "Albert Speer was a German architect who was the Minister of Armaments and War Production from 1942 to 1945. Often credited with the 'Armaments miracle', his appointment will increase Industrial Efficiency."
  raeder:0 "Erich Raeder"
- raeder_desc:0 "Erich Raeder was a German admiral who favored the use of traditional surface ships and the Fleet in Being doctrine."
+ raeder_desc:0 "Erich Raeder was a German admiral who favoured the use of traditional surface ships and the Fleet in Being doctrine."
  donitz:0 "Karl Dönitz"
  donitz_desc:0 "Karl Dönitz was a German admiral with a fondness for Submarines and the Trade Interdiction doctrine."
  goering:0 "Hermann Göring"
@@ -44,18 +44,18 @@
  ernst_udet:0 "Ernst Udet"
  ernst_udet_desc:0 "Ernst Udet was influential in the adoption of dive bombing techniques as well as the Stuka dive bomber."
  werner_von_fritsch:0 "Werner von Fritsch"
- werner_von_fritsch_desc:0 "Werner von Fritsch, a general of the old guard, favors a focus on Infantry."
+ werner_von_fritsch_desc:0 "Werner von Fritsch, a general of the old guard, favours a focus on Infantry."
  ludwig_beck:0 "Ludwig Beck"
- ludwig_beck_desc:0 "Ludwig Beck places a special emphasize on Supply."
+ ludwig_beck_desc:0 "Ludwig Beck places a special emphasis on Supply."
  franz_halder:0 "Franz Halder"
  franz_halder_desc:0 "Franz Halder believes in the striking power of Artillery in the attack."
  heinz_guderian:0 "Heinz Guderian"
  wilhelm_keitel:0 "Wilhelm Keitel"
- wilhelm_keitel_desc:0 "Wilhelm Keitel, a general of the Old Guard, favors Infantry. What he lacks in skill he makes up for in loyalty."
+ wilhelm_keitel_desc:0 "Wilhelm Keitel, a general of the Old Guard, favours Infantry. What he lacks in skill he makes up for in loyalty."
  ferdinand_schorner:0 "Ferdinand Schörner"
- ferdinand_schorner_desc:0 "Ferdinand Schörner is skilled in Defense and fighting in cold weather conditions."
+ ferdinand_schorner_desc:0 "Ferdinand Schörner is skilled in Defence and fighting in cold weather conditions."
  general_staff:0 "General Staff"
- general_staff_desc:0 "The German General staff was responsible for the continuous study of all aspects of war, including the drawing up and reviewing of plans for mobilization or campaign. This contributed to a higher level of Organization in the army."
+ general_staff_desc:0 "The German General staff was responsible for the continuous study of all aspects of war, including the drawing up and reviewing of plans for mobilisation or campaign. This contributed to a higher level of Organisation in the army."
  v_weapons:0 "Vengeance Weapons"
  v_weapons_desc:0 "Long range bombardment Rockets would make ideal Vengeance Weapons against our enemies."
  hermann_gortz:0 "Hermann Görtz"
@@ -63,9 +63,9 @@
  elyesa_bazna:0 "Elyesa Bazna"
  elyesa_bazna_desc:0 "§HElyesa Bazna§! is widely known under his code name Cicero."
  marina_lee:0 "Marina Lee"
- marina_lee_desc:0 "§HMarina Lee§! is a ballerina that specializes in stealing battle plans."
- german_advisors:0 "German Military Advisors"
- german_advisors_desc:0 "A German military mission led by Alexander von Falkenhausen is present in China, and its advisors are assisting us in bringing our army up to Western standards."
+ marina_lee_desc:0 "§HMarina Lee§! is a ballerina that specialises in stealing battle plans."
+ german_advisors:0 "German Military Advisers"
+ german_advisors_desc:0 "A German military mission led by Alexander von Falkenhausen is present in China, and its advisers are assisting us in bringing our army up to Western standards."
  walther_von_brauchitsch:0 "W. von Brauchitsch"
  erwin_rommel:0 "Erwin Rommel"
  gerd_von_rundstedt:0 "Gerd von Rundstedt"
@@ -144,7 +144,7 @@
  john_brown_company:0 "John Brown & Company"
  aioc:0 "AIOC"
  english_electric:0 "English Electric"
- springfield_armory:0 "Springfield Armory"
+ springfield_armory:0 "Springfield Armoury"
  ford_motor_company:0 "Ford Motor Company"
  standard_oil_california:0 "Standard Oil of California"
  general_electric:0 "General Electric"
@@ -372,10 +372,10 @@
  undisturbed_isolation_desc:0 "Still recovering from the Great Depression and the Dust Bowl famine, the nation is slowly rebuilding its infrastructure. America's industries are in most cases working at half capacity, and will keep doing so unless major events rouse the nation from torpor."
  isolation:0 "Isolation"
  civilian_economy:0 "Civilian Economy"
- low_economic_mobilisation:0 "Early Mobilization"
- partial_economic_mobilisation:0 "Partial Mobilization"
+ low_economic_mobilisation:0 "Early Mobilisation"
+ partial_economic_mobilisation:0 "Partial Mobilisation"
  war_economy:0 "War Economy"
- tot_economic_mobilisation:0 "Total Mobilization"
+ tot_economic_mobilisation:0 "Total Mobilisation"
  idea_group_mobilization_laws:0 "Conscription Laws"
  disarmed_nation:0 "Disarmed Nation"
  volunteer_only:0 "Volunteer Only"
@@ -397,7 +397,7 @@
  generic_air_chief_ground_support:0 "Support Air Chief"
  generic_air_chief_reform:0 "Innovative Air Chief"
  generic_army_entrenchment:0 "Trench General"
- generic_army_regrouping:0 "Organized General"
+ generic_army_regrouping:0 "Organised General"
  generic_army_logistics:0 "Logistics General"
  generic_navy_amphibious_assault:0 "Invasion Admiral"
  generic_navy_naval_air_defense:0 "Anti-Air Admiral"
@@ -408,8 +408,8 @@
  generic_land_doctrine:0 "Ground Visionary"
  generic_naval_doctrine:0 "Naval Visionary"
  generic_air_doctrine:0 "Aerial Visionary"
- generic_tank_manufacturer:0 "Armor Company"
- generic_motorized_equipment_manufacturer:0 "Motorization Company"
+ generic_tank_manufacturer:0 "Armour Company"
+ generic_motorized_equipment_manufacturer:0 "Motorisation Company"
  generic_infantry_equipment_manufacturer:0 "Small Arms Company"
  generic_artillery_manufacturer:0 "Artillery Company"
  generic_light_aircraft_manufacturer:0 "Light Air Company"
@@ -431,7 +431,7 @@
  idea_group_industrial_concern:0 "Industrial Concern"
  idea_category_country:0 "Country"
  idea_category_country_desc:0 "Adopt ideas/hire ministers to help steer your country"
- idea_category_political:0 "Political Advisors"
+ idea_category_political:0 "Political Advisers"
  idea_category_political_desc:0 "Adopt ideas/hire ministers to help steer your country"
  idea_category_military:0 "Military Staff"
  idea_category_military_desc:0 "Adopt ideas/hire ministers to help steer your military"
@@ -445,8 +445,8 @@
  idea_group_political_reform_desc:0 "People and ideas with potential to change the political landscape in the nation"
  idea_group_economy:0 "Economic Laws"
  idea_group_economic_desc:0 "Adopt one of these ideas or hire one of these ministers to help steer your economy"
- idea_group_armor:0 "Armor"
- idea_group_armor_desc:0 "Ideas and people that boost production and research into armored units"
+ idea_group_armor:0 "Armour"
+ idea_group_armor_desc:0 "Ideas and people that boost production and research into armoured units"
  idea_group_artillery:0 "Artillery"
  idea_group_artillery_desc:0 "Ideas and people that boost production and research into artillery"
  idea_group_infantry:0 "Infantry"
@@ -463,8 +463,8 @@
  idea_group_naval_desc:0 "Ideas and people that boost naval production and research"
  idea_group_electronics:0 "Electronics"
  idea_group_electronics_desc:0 "Ideas and people that boost production and research into electronics"
- idea_group_motorized:0 "Motorized"
- idea_group_motorized_desc:0 "Ideas and people that boost production and research into motorized units"
+ idea_group_motorized:0 "Motorised"
+ idea_group_motorized_desc:0 "Ideas and people that boost production and research into motorised units"
  idea_group_rocketry:0 "Rocketry"
  idea_group_rocketry_desc:0 "Ideas and people that boost production and research into rocketry"
  idea_group_nuclear:0 "Nuclear"
@@ -580,7 +580,7 @@
  GER_air_innovations_2_idea:0 "German Air Innovations"
  GER_rocketry_idea:0 "German Rocketry"
  triumphant_will:0 "Triumphant Will"
- militarized_schools:0 "Militarized Schools"
+ militarized_schools:0 "Militarised Schools"
  collectivist_ethos_focus:0 "Collectivist Ethos"
  liberty_ethos_focus:0 "Liberty Ethos"
  militarism_focus:0 "Militarism"
@@ -589,8 +589,8 @@
  neutrality_idea:0 "Neutral Foreign Policy"
  neutrality_idea_desc:0 "Neutrality is sometimes viewed as a craven stance, but this nation trusts that when the dust settles, those who didn't take sides may be better off than those who did."
  anti_soviet_pact:0 "Anti-Soviet Pact"
- anti_soviet_pact_refused_call:0 "Refused To Honor Anti-Soviet Pact"
- anti_soviet_pact_refused_call_desc:0 "This nation did not honor the Anti-Soviet Pact when called to war. This has caused the people to doubt the current government and spurred a rise in communist supporters."
+ anti_soviet_pact_refused_call:0 "Refused To Honour Anti-Soviet Pact"
+ anti_soviet_pact_refused_call_desc:0 "This nation did not honour the Anti-Soviet Pact when called to war. This has caused the people to doubt the current government and spurred a rise in communist supporters."
  anti_soviet_pact_desc:1 "If one country in the pact is attacked by the Soviet Union, all other members will be called to war. Member already at war with Soviet Union will not be called."
  ideological_fanaticism_focus:0 "Ideological Fanaticism"
  political_commissars_focus:0 "Political Commissars"
@@ -599,7 +599,7 @@
  government:1 "Laws & Government"
  research_production:0 "Research & Production"
  military_staff:0 "Military Staff"
- political_advisor:0 "Political Advisor"
+ political_advisor:0 "Political Adviser"
  mobilization_laws:0 "Conscription Law"
  trade_laws:0 "Trade Law"
  economy:0 "Economy Law"
@@ -621,14 +621,14 @@
  internationalism_desc:0 "We strongly believe that ideology span across national borders and do not feel limited in crossing those borders ourselves."
  combined_bomber_offensive:0 "Combined Bomber Offensive"
  the_long_lance:0 "The Long Lance"
- the_long_lance_desc:0 "§LThe Type-93 torpedo, commonly nicknamed The Long Lance, was the most advanced torpedo of the time. It was developed by Japan and never really matched by the west, giving smaller ships an effective way of hurting larger, more armored warships at range.§!"
+ the_long_lance_desc:0 "§LThe Type-93 torpedo, commonly nicknamed The Long Lance, was the most advanced torpedo of the time. It was developed by Japan and never really matched by the west, giving smaller ships an effective way of hurting larger, more armoured warships at range.§!"
  volunteer_corps_focus:0 "Volunteer Corps"
  foreign_expeditions_focus:0 "Foreign Expeditions"
  why_we_fight_focus:0 "Why We Fight"
  partisan_suppression_focus:0 "Partisan Suppression"
  imperial_austerity_idea:0 "Imperial Austerity"
- student_mobilization_idea:0 "Student Mobilization"
- spiritual_mobilization_idea:0 "Spiritual Mobilization"
+ student_mobilization_idea:0 "Student Mobilisation"
+ spiritual_mobilization_idea:0 "Spiritual Mobilisation"
  spiritual_mobilization_idea_desc:0 ""Luxury is our Enemy!" With thrift, hygiene and hard work elevated to national virtues, more manpower is made available to the war effort."
  office_of_strategic_services:0 "Office of Strategic Services"
  office_of_strategic_services_desc:0 "§LThe Office of Strategic Services (OSS) was a United States intelligence agency formed during World War II. It was the wartime intelligence agency, and a predecessor of the Central Intelligence Agency (CIA).§!"
@@ -652,7 +652,7 @@
  comintern_influence:0 "Comintern influence"
  progress_cult_focus:0 "Progress Cult"
  socialist_science_focus:0 "Socialist Science"
- peoples_commissariat_focus:0 "People's Commissariat of Defense Industry"
+ peoples_commissariat_focus:0 "People's Commissariat of Defence Industry"
  home_of_revolution:0 "Home of the Revolution"
  home_of_revolution_desc:0 "Comrades, with the defeat of the vile Trotskyite counter revolutionaries we were able to focus on defending the revolution. Our goal, our hope, our slogan is Socialism in One Country. We will build a bountiful socialist utopia here in the Soviet Union and the rest of the world will inevitably embrace it."
  en_svensk_tiger:0 "En Svensk Tiger"
@@ -771,7 +771,7 @@
  SPA_luis_carrero_blanco:0 "Luis Carrero Blanco"
  SPA_angel_salas_larrazabal:0 "Ángel Salas Larrazábal"
  SPA_recovering_from_civil_war:0 "Recovering From Civil War"
- SPA_recovering_from_civil_war_desc:0 "Spain is currently focused on rebuilding the country and less willing to join a faction."
+ SPA_recovering_from_civil_war_desc:0 "Spain is currently focussed on rebuilding the country and less willing to join a faction."
  CHI_generic_democratic_reformer:0 "Kwong Jiang"
  CHI_generic_fascist_demagogue:0 "Tan Huang"
  CHI_zhu_de:0 "Zhu De"
@@ -1439,15 +1439,15 @@
  SAF_ossewabrandwag_fascism:0 "Ossewabrandwag"
  SAF_gold_exports:0 "Gold Exports"
  SAF_voortrekker_monument_2:0 "Voortrekker Monument"
- SAF_cheap_labor_1:0 "Cheap Labor"
- SAF_cheap_labor_2:0 "Cheap Labor"
- SAF_cheap_labor_3:0 "Cheap Labor"
+ SAF_cheap_labor_1:0 "Cheap Labour"
+ SAF_cheap_labor_2:0 "Cheap Labour"
+ SAF_cheap_labor_3:0 "Cheap Labour"
  SAF_king_edward:0 "Edward VIII"
  SAF_abandon_westminster_fascism:0 "Abandon Westminster"
  SAF_abandon_westminster_communism:0 "Abandon Westminster"
  SAF_history_of_segregation:0 "History of Segregation"
  SAF_history_of_segregation_2:0 "History of Segregation"
- SAF_soviet_advisers:0 "Soviet Advisors"
+ SAF_soviet_advisers:0 "Soviet Advisers"
  SAF_black_volunteers:0 "Black Volunteers"
  SAF_equal_opportunities:0 "Equal Opportunities"
  SAF_spanish_volunteers:0 "Spanish Volunteers"
@@ -1562,9 +1562,9 @@
  RAJ_ram_dass_katari:0 "Ram Dass Katari"
  RAJ_azad_hind:0 "Azad Hind"
  RAJ_azad_hind_desc:0 "The Free India government, supported by enemies of the British, is working towards the liberation of India. They are working with Japan to subvert European rule, in the hopes of establishing a self-governing Indian state."
- RAJ_marginalized_muslim_community:0 "Marginalized Muslim Community"
- RAJ_marginalized_muslim_community_angry:0 "Marginalized Muslim Community"
- RAJ_marginalized_muslim_community_happy:0 "Marginalized Muslim Community"
+ RAJ_marginalized_muslim_community:0 "Marginalised Muslim Community"
+ RAJ_marginalized_muslim_community_angry:0 "Marginalised Muslim Community"
+ RAJ_marginalized_muslim_community_happy:0 "Marginalised Muslim Community"
  RAJ_risk_of_famine:0 "Risk of Famine"
  RAJ_risk_of_famine_desc:1 "The Indian system of food production is very fragile. Even a small interruption might cause a collapse."
  RAJ_famine:0 "Famine"
@@ -2284,8 +2284,8 @@
  FRA_henri_marie_auguste_bineau:0 "Henri Marie Auguste Bineau"
  FRA_pierre_alombert_goget:0 "Pierre Alombert Goget"
  FRA_support_the_left_focus:0 "Support the Left"
- FRA_national_mobilization_focus:0 "National Mobilization"
- FRA_support_the_centre_focus:0 "Support the Center"
+ FRA_national_mobilization_focus:0 "National Mobilisation"
+ FRA_support_the_centre_focus:0 "Support the Centre"
  FRA_strengthen_government_support_focus:0 "Strengthen Government Support"
  FRA_scw_intervention_republicans_focus:0 "Spanish Civil War intervention"
  FRA_victors_of_wwi:0 "Victors of the Great War"
@@ -2349,7 +2349,7 @@
  ITA_luigi_einaudi:0 "Luigi Einaudi"
  ITA_junio_valerio_borghese:0 "Junio Valerio Borghese"
  ITA_paolo_thaon_di_revel:0 "Paolo Thaon di Revel"
- ITA_german_millitary_cooperation_focus:0 "German Millitary Cooperation"
+ ITA_german_millitary_cooperation_focus:0 "German Military Co-operation"
  JAP_mitsumasa_yonai:0 "Mitsumasa Yonai"
  JAP_hiroshi_oshima:0 "Hiroshi Oshima"
  JAP_chiune_sugihara:0 "Chiune Sugihara"
@@ -2363,7 +2363,7 @@
  ENG_the_war_to_end_all_wars_desc:0 "With the Great War in recent memory, both the nation's people and leaders are reluctant to send another generation to die in the trenches."
  communist_pressure:0 "Communist pressure"
  rhineland_challenge_met:0 "Rhineland Challenge Met"
- rhineland_challenge_met_desc:0 "After predictions that the Rhineland could be remilitarized without Allied intervention, Germany ended up pressured to back down after this turned out to be a mistake."
+ rhineland_challenge_met_desc:0 "After predictions that the Rhineland could be remilitarised without Allied intervention, Germany ended up pressured to back down after this turned out to be a mistake."
  fascist_revolutionaries:0 "Fascist Revolutionaries"
  fascist_revolutionaries_desc:0 "If support for Fascism rises above 70%, the nation will be plunged into civil war. If support for Fascism drops below 30%, revolutionary activity will stop."
  communist_revolutionaries:0 "Communist Revolutionaries"
@@ -2381,9 +2381,9 @@
  reign_of_terror:0 "Reign of Terror"
  reign_of_terror_desc:0 "Having recently come to power, the current regime is ruthless in the pursuit of its enemies, shutting down opposition before it arises."
  anti_german_military:0 "Anti-German Military"
- anti_german_military_desc:0 "Factions within the Yugoslavian Airforce are opposed to cooperating with Germany. They may attempt to overthrow the regime if the country opens their borders to or enters an alliance with the Third Reich."
+ anti_german_military_desc:0 "Factions within the Yugoslavian Airforce are opposed to co-operating with Germany. They may attempt to overthrow the regime if the country opens their borders to or enters an alliance with the Third Reich."
  anti_nazi_coup:0 "Anti-Nazi Coup"
- anti_nazi_coup_desc:0 "Having overthrown Prince Paul to prevent cooperation with Germany, the new regime oppose pro-fascist diplomacy."
+ anti_nazi_coup_desc:0 "Having overthrown Prince Paul to prevent co-operation with Germany, the new regime oppose pro-fascist diplomacy."
  AST_indonesian_nationalists:0 "Indonesian Nationalists"
  shattered_government:0 "Shattered Government"
  synarchist_support_surge:0 "Synarchist Support Surge"
