--- a/localisation/technology_sharing_l_english.yml
+++ b/localisation/technology_sharing_l_english.yml
@@ -12,7 +12,7 @@
  us_research_name:0 "US Research"
  us_research_desc:0 "Reduced research time for technologies researched by the US."
  swpi_research_name:0 "SWPI Research"
- swpi_research_desc:0 "Reduced research time for technologies researched by other countries in the South-West Pacific Initative."
+ swpi_research_desc:0 "Reduced research time for technologies researched by other countries in the South-West Pacific Initiative."
  TECH_SHARNG_FACTOR_PER_COUNTRY:0 "\n\nEach member with a tech reduces time by $VALUE|+%0$:\n"
  TECH_SHARNG_FACTOR_BASE:0 "Base: $VALUE|0%Y$\n"
  TECH_SHARNG_COUNTRY_BONUS:0 "Bonus: $VALUE|0%Y$\n"
